[package]
name = "argon2-kdf"
version = "1.0.0"
edition = "2021"
readme = "Readme.md"
description = "Intuitive Rust bindings for Argon2"
categories = ["cryptography"]
documentation = "https://docs.rs/argon2-kdf/latest/argon2-kdf"
repository = "https://github.com/ted-tanner/argon2-kdf"

[dependencies]
base64 = "0.13"
rand = "0.8"

[build-dependencies]
bindgen = "0.63"
cc = { version = "1.0", features = ["parallel"] }
