[package]
name = "argon2-kdf"
version = "1.6.3"
rust-version = "1.82.0"
edition = "2021"
readme = "Readme.md"
license = "MIT"
description = "Intuitive Rust bindings for Argon2"
categories = ["cryptography"]
documentation = "https://docs.rs/argon2-kdf/latest/argon2-kdf"
repository = "https://github.com/ted-tanner/argon2-kdf"

[dependencies]
base64 = "0.22.*"
rand = "0.9.*"

[build-dependencies]
bindgen = "0.72.*"
cc = { version = "1.2.*", features = ["parallel"] }
